--- a/src/app/_components/dashboard/dashboard.component.css
+++ b/src/app/_components/dashboard/dashboard.component.css
@@ -1,16 +1,23 @@
-.login-card {
-  width: 300px;
-  margin: auto;
-  margin-top: 100px;
-}
-
-.mat-card-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.mat-form-field {
+/* Custom CSS */
+.auth-content {
   width: 100%;
-  margin-bottom: 20px;
+  max-width: 400px;
+  height: 400px; /* Set your desired fixed height */
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+.auth-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.error-wrapper {
+  color: #dc3545;
+  margin-top: 5px;
+}
+
+/* If needed, you can add more custom styling here */
