--- a/src/app/_components/dashboard/dashboard.component.html
+++ b/src/app/_components/dashboard/dashboard.component.html
@@ -1,32 +1,28 @@
-<div class="login-container mat-elevation-z4">
-  <mat-card>
-    <mat-card-header>
-      <mat-card-title>Login</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <form (ngSubmit)="onSubmit()">
-        <mat-form-field>
-          <input matInput placeholder="Username" [(ngModel)]="username" name="username" required>
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput type="password" placeholder="Password" [(ngModel)]="password" name="password" required>
-        </mat-form-field>
-        <button mat-raised-button color="primary" type="submit">Login</button>
-      </form>
-    </mat-card-content>
-  </mat-card>
-</div>
-<!-- <div class="login-container">
-  <div class="login-box">
-    <h2>Login</h2>
-    <form (ngSubmit)="onSubmit()">
-      <div class="form-group">
-        <input type="text" placeholder="Username" [(ngModel)]="username" name="username" required>
+<div class="auth-container">
+  <div class="auth-content">
+    <form [formGroup]="form" (ngSubmit)="onSubmit()" class="fs-13px">
+      <div class="form-wrapper">
+        <div class="form-floating ">
+          <input type="text" class="form-control h-45px fs-13px" placeholder="Email Address" id="emailAddress" formControlName="userName">
+        </div>
+        <div *ngIf="f['userName'].touched && f['userName'].errors" class="error-wrapper">
+          <p *ngIf="f['userName'].errors['required']">Email is required</p>
+          <p *ngIf="f['userName'].errors['email']">Email is invalid</p>
+        </div>
       </div>
-      <div class="form-group">
-        <input type="password" placeholder="Password" [(ngModel)]="password" name="password" required>
+      <div class="form-floating mt-3">
+        <input type="password" class="form-control h-45px fs-13px" placeholder="Password" id="password" formControlName="password">
       </div>
-      <button type="submit">Login</button>
+      <div *ngIf="f['password'].touched && f['password'].errors" class="error-wrapper">
+        <p *ngIf="f['password'].errors['required']">Password is required</p>
+      </div>
+      <div class="mb-3 mt-5">
+        <button type="submit" [disabled]="form.invalid"  class="btn btn-success d-block h-45px w-100 btn-lg fs-14px">Sign me in</button>
+      </div>
+      <hr class="bg-gray-600 opacity-2">
+      <div class="text-gray-600 text-center mb-0">
+        &copy; UsersApp Zentury All rights reserved 2022
+      </div>
     </form>
   </div>
-</div> -->
+</div>
