--- a/src/app/_components/logins/logins.component.html
+++ b/src/app/_components/logins/logins.component.html
@@ -1,1 +1,40 @@
-<p>logins works!</p>
+
+<mat-form-field>
+    <mat-label>Filter by User</mat-label>
+    <input matInput [(ngModel)]="userFilter" (input)="applyFilter()" placeholder="User">
+</mat-form-field>
+  
+<table class="user-logins-table" mat-table [dataSource]="userLogins_">
+    <!-- Columns -->
+    <ng-container matColumnDef="userName">
+      <th mat-header-cell *matHeaderCellDef> Username </th>
+      <td mat-cell *matCellDef="let login"> {{ login.userName }} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="loginDateTime">
+        <th mat-header-cell *matHeaderCellDef> Login Date </th>
+        <td mat-cell *matCellDef="let login"> {{ login.loginDateTime | date:'yyyy-MM-dd' }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="loginTime">
+        <th mat-header-cell *matHeaderCellDef> Login Time </th>
+        <td mat-cell *matCellDef="let login"> {{ login.loginDateTime | date:'HH:mm:ss' }} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="isLoginSuccessful">
+        <th mat-header-cell *matHeaderCellDef> Login status </th>
+        <td mat-cell *matCellDef="let login">
+            <ng-container *ngIf="login.isLoginSuccessful; else failedLogin">
+              Login succeeded
+            </ng-container>
+            <ng-template #failedLogin>
+              Login failed
+            </ng-template>
+          </td>      </ng-container>
+    
+    <!-- Other columns as needed -->
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  
