--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,5 @@ body
 {
     background-color:rgb(207, 222, 235)
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
