--- a/src/app/_components/logins/logins.component.css
+++ b/src/app/_components/logins/logins.component.css
@@ -1,23 +1,46 @@
-/* Add styling to the table */
+.user-logins-container {
+  margin: auto;
+  padding: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  width:20%;
+}
+
+.user-logins-table-container {
+  margin: 20px;
+  padding: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  overflow-x: auto;
+}
+.paginator{
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
 .user-logins-table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-  /* Style for table header cells */
-  .user-logins-table th {
-    background-color: #f2f2f2;
-    font-weight: bold;
-    padding: 10px;
-  }
-  
-  /* Style for table data cells */
-  .user-logins-table td {
-    padding: 10px;
-  }
-  
-  /* Apply alternating row colors */
-  .user-logins-table tr:nth-child(even) {
-    background-color: #f2f2f2;
-  }
-  
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.user-logins-table th,
+.user-logins-table td {
+  border: 1px solid #ddd;
+  padding: 10px;
+  text-align: left;
+}
+
+.user-logins-table th {
+  background-color: #f5f5f5;
+}
+
+.user-logins-table th.mat-sort-header-sorted,
+.user-logins-table th.mat-sort-header-sorted:hover {
+  background-color: #f0f0f0;
+}
+
+.mat-form-field {
+  width: 100%;
+}
+
+.mat-card-content {
+  padding: 0;
+}
