--- a/src/app/_components/logins/logins.component.html
+++ b/src/app/_components/logins/logins.component.html
@@ -1,40 +1,51 @@
-
-<mat-form-field>
-    <mat-label>Filter by User</mat-label>
-    <input matInput [(ngModel)]="userFilter" (input)="applyFilter()" placeholder="User">
-</mat-form-field>
+  <mat-card class="user-logins-container">
+    <mat-card-content>
+      <mat-form-field>
+        <mat-label>Filter by User</mat-label>
+        <input matInput [(ngModel)]="userFilter" (input)="applyFilter()" placeholder="User">
+      </mat-form-field>
+    </mat-card-content>
+  </mat-card>
   
-<table class="user-logins-table" mat-table [dataSource]="userLogins_">
-    <!-- Columns -->
-    <ng-container matColumnDef="userName">
-      <th mat-header-cell *matHeaderCellDef> Username </th>
-      <td mat-cell *matCellDef="let login"> {{ login.userName }} </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="loginDateTime">
-        <th mat-header-cell *matHeaderCellDef> Login Date </th>
-        <td mat-cell *matCellDef="let login"> {{ login.loginDateTime | date:'yyyy-MM-dd' }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="loginTime">
-        <th mat-header-cell *matHeaderCellDef> Login Time </th>
-        <td mat-cell *matCellDef="let login"> {{ login.loginDateTime | date:'HH:mm:ss' }} </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="isLoginSuccessful">
-        <th mat-header-cell *matHeaderCellDef> Login status </th>
-        <td mat-cell *matCellDef="let login">
-            <ng-container *ngIf="login.isLoginSuccessful; else failedLogin">
-              Login succeeded
-            </ng-container>
-            <ng-template #failedLogin>
-              Login failed
-            </ng-template>
-          </td>      </ng-container>
+  <mat-card class="user-logins-table-container">
+    <mat-card-content>
+      <table mat-table [dataSource]="userLogins_" class="user-logins-table">
+        <ng-container matColumnDef="userName">
+          <th mat-header-cell *matHeaderCellDef> Username </th>
+          <td mat-cell *matCellDef="let login"> {{ login.userName }} </td>
+        </ng-container>
+      
+        <ng-container matColumnDef="loginDateTime">
+            <th mat-header-cell *matHeaderCellDef> Login Date </th>
+            <td mat-cell *matCellDef="let login"> {{ login.loginDateTime | date:'yyyy-MM-dd' }} </td>
+        </ng-container>
     
-    <!-- Other columns as needed -->
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+        <ng-container matColumnDef="loginTime">
+            <th mat-header-cell *matHeaderCellDef> Login Time </th>
+            <td mat-cell *matCellDef="let login"> {{ login.loginDateTime | date:'HH:mm:ss' }} </td>
+        </ng-container>
+      
+        <ng-container matColumnDef="isLoginSuccessful">
+            <th mat-header-cell *matHeaderCellDef> Login status </th>
+            <td mat-cell *matCellDef="let login">
+                <ng-container *ngIf="login.isLoginSuccessful; else failedLogin">
+                  Login succeeded
+                </ng-container>
+                <ng-template #failedLogin>
+                  Login failed
+                </ng-template>
+              </td>      </ng-container>
+        
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+      <div class="paginator">
+        <mat-paginator [length]="totalUserLoginsCount"
+               [pageSize]="pageSize"
+               [pageSizeOptions]="[10]"
+               aria-label="Select page">
+        </mat-paginator>
+      </div>
+    </mat-card-content>
+  </mat-card>
   
