--- a/src/app/_components/users/users.component.html
+++ b/src/app/_components/users/users.component.html
@@ -1,41 +1,57 @@
-<button mat-raised-button color="primary" (click)="openCreateDialog()">Create User</button>
-<div class="mat-elevation-z8 user-table-container">
-    <table mat-table [dataSource]="users" matSort class="user-table">
-      <!-- Columns -->
-      <ng-container matColumnDef="firstName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
-        <td mat-cell *matCellDef="let user"> {{ user.firstName }} </td>
-      </ng-container>
-  
-      <ng-container matColumnDef="lastName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
-        <td mat-cell *matCellDef="let user"> {{ user.lastName }} </td>
-      </ng-container>
-  
-      <ng-container matColumnDef="username">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Username </th>
-        <td mat-cell *matCellDef="let user"> {{ user.username }} </td>
-      </ng-container>
-  
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
-        <td mat-cell *matCellDef="let user"> {{ user.email }} </td>
-      </ng-container>
-  
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
-        <td mat-cell *matCellDef="let user" class="action-buttons">
-          <button mat-icon-button color="primary" (click)="editUser(user)">
-            <mat-icon>edit</mat-icon>
-          </button>
-          <button mat-icon-button color="warn" (click)="openDeleteDialog(user)">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  </div>
-  
+<!-- users.component.html -->
+<div class="user-logins">
+  <mat-card class="header">
+    <mat-card-title>Users</mat-card-title>
+    <button mat-raised-button color="primary" routerLink="/user-logins">Go to User Logins</button>
+  </mat-card>
+</div>
+<div class="users-button">
+    <button mat-raised-button color="primary" (click)="openCreateDialog()">Create User</button>
+</div>
+
+  <div class="mat-elevation-z8 user-table-container">
+      <table mat-table [dataSource]="users" matSort class="user-table">
+        <!-- Columns -->
+        <ng-container matColumnDef="firstName">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
+          <td mat-cell *matCellDef="let user"> {{ user.firstName }} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="lastName">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
+          <td mat-cell *matCellDef="let user"> {{ user.lastName }} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="username">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Username </th>
+          <td mat-cell *matCellDef="let user"> {{ user.username }} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+          <td mat-cell *matCellDef="let user"> {{ user.email }} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef> Actions </th>
+          <td mat-cell *matCellDef="let user" class="action-buttons">
+            <button mat-icon-button color="primary" (click)="editUser(user)">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-icon-button color="warn" (click)="openDeleteDialog(user)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+    
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+      <div class="paginator">
+        <mat-paginator [length]="100"
+        [pageSize]="10"
+        [pageSizeOptions]="[10]"
+        aria-label="Select page">
+        </mat-paginator>     
+      </div>
+    </div>
