--- a/src/app/_components/users/create-user-dialog/create-user-dialog.component.html
+++ b/src/app/_components/users/create-user-dialog/create-user-dialog.component.html
@@ -8,16 +8,13 @@
       <input matInput placeholder="Last Name" formControlName="lastName" required>
     </mat-form-field>
     <mat-form-field class="form-field">
-      <input matInput placeholder="Username" formControlName="username" required>
+      <input matInput placeholder="Username" formControlName="userName" required>
     </mat-form-field>
     <mat-form-field class="form-field">
       <input matInput placeholder="Email" formControlName="email" required>
     </mat-form-field>
     <mat-form-field class="form-field">
       <input matInput type="password" placeholder="Password" formControlName="passwordHash" required>
-      <mat-error *ngIf="f['password'].touched && f['password'].hasError('required')">Password is required</mat-error>
-      <mat-error *ngIf="f['passwordHash'].errors?.pattern">Password must contain at least 1 capital letter and 1 number</mat-error>
-      <mat-error *ngIf="f['passwordHash'].errors?.minlength">Password must be at least 6 characters</mat-error>
     </mat-form-field>
   </form>
 </mat-dialog-content>
