--- a/src/app/_components/logins/logins.component.html
+++ b/src/app/_components/logins/logins.component.html
@@ -1,32 +1,23 @@
-  <mat-card class="user-logins-container">
-    <mat-card-content>
-      <mat-form-field>
-        <mat-label>Filter by User</mat-label>
-        <input matInput [(ngModel)]="userFilter" (input)="applyFilter()" placeholder="User">
-      </mat-form-field>
-    </mat-card-content>
-  </mat-card>
-  
   <mat-card class="user-logins-table-container">
     <mat-card-content>
-      <table mat-table [dataSource]="userLogins_" class="user-logins-table">
+      <table mat-table [dataSource]="userLogins" class="user-logins-table" matSort>
         <ng-container matColumnDef="userName">
-          <th mat-header-cell *matHeaderCellDef> Username </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Username </th>
           <td mat-cell *matCellDef="let login"> {{ login.userName }} </td>
         </ng-container>
       
         <ng-container matColumnDef="loginDateTime">
-            <th mat-header-cell *matHeaderCellDef> Login Date </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Login Date </th>
             <td mat-cell *matCellDef="let login"> {{ login.loginDateTime | date:'yyyy-MM-dd' }} </td>
         </ng-container>
     
         <ng-container matColumnDef="loginTime">
-            <th mat-header-cell *matHeaderCellDef> Login Time </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Login Time </th>
             <td mat-cell *matCellDef="let login"> {{ login.loginDateTime | date:'HH:mm:ss' }} </td>
         </ng-container>
       
         <ng-container matColumnDef="isLoginSuccessful">
-            <th mat-header-cell *matHeaderCellDef> Login status </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Login Status </th>
             <td mat-cell *matCellDef="let login">
                 <ng-container *ngIf="login.isLoginSuccessful; else failedLogin">
                   Login succeeded
@@ -34,8 +25,16 @@
                 <ng-template #failedLogin>
                   Login failed
                 </ng-template>
-              </td>      </ng-container>
-        
+              </td>      
+        </ng-container>
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Delete Log </th>
+          <td mat-cell *matCellDef="let login">
+            <button mat-icon-button color="warn" (click)="openDeleteDialog(login)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
