--- a/src/app/_components/header/header.component.html
+++ b/src/app/_components/header/header.component.html
@@ -2,7 +2,8 @@
     <mat-toolbar>
     <span>ZenturyApp</span>
     <span class="example-spacer"></span>
-    <div *ngIf="isLoggedIn">
+    <!-- <div *ngIf="isLoggedIn"> -->
+    <div>
       <button mat-button color="warn" (click)="logout()">Logout</button>
     </div>
   </mat-toolbar>
