--- a/src/app/_components/logins/logins.component.html
+++ b/src/app/_components/logins/logins.component.html
@@ -28,7 +28,7 @@
               </td>      
         </ng-container>
         <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Delete Log </th>
+          <th mat-header-cell *matHeaderCellDef> Delete Log </th>
           <td mat-cell *matCellDef="let login">
             <button mat-icon-button color="warn" (click)="openDeleteDialog(login)">
               <mat-icon>delete</mat-icon>
